--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@btsd/aitu-bridge": "^0.2.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@sandstreamdev/react-swipeable-list": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
